@@ -108,6 +108,8 @@ int             refresh_rate=DEFAULT_REFRESH_RATE;
 
 int             escape_html_tags=FALSE;
 
+int             use_ssl_authentication=FALSE;
+
 int             default_statusmap_layout_method=0;
 int             default_statuswrl_layout_method=0;
 
@@ -405,6 +407,9 @@ int read_cgi_config_file(char *filename){
 
 		else if(!strcmp(var,"lock_author_names"))
 			lock_author_names=(atoi(val)>0)?TRUE:FALSE;
+
+		else if(!strcmp(var,"use_ssl_authentication"))
+			use_ssl_authentication=(atoi(val)>0)?TRUE:FALSE;
  	        }
 
 	/* free memory and close the file */
